--- a/addition/cabal.sandbox.config
+++ b/addition/cabal.sandbox.config
@@ -4,15 +4,15 @@
 -- if you want to change the default settings for this sandbox.
 
 
-local-repo: /Users/andrew/lang/haskell/addition/.cabal-sandbox/packages
-logs-dir: /Users/andrew/lang/haskell/addition/.cabal-sandbox/logs
-world-file: /Users/andrew/lang/haskell/addition/.cabal-sandbox/world
+local-repo: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox/packages
+logs-dir: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox/logs
+world-file: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox/world
 user-install: False
-package-db: /Users/andrew/lang/haskell/addition/.cabal-sandbox/x86_64-osx-ghc-7.10.3-packages.conf.d
-build-summary: /Users/andrew/lang/haskell/addition/.cabal-sandbox/logs/build.log
+package-db: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox/x86_64-osx-ghc-7.10.3-packages.conf.d
+build-summary: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox/logs/build.log
 
 install-dirs
-  prefix: /Users/andrew/lang/haskell/addition/.cabal-sandbox
+  prefix: /Users/andrew/lang/haskell/haskell-book.bk/addition/.cabal-sandbox
   bindir: $prefix/bin
   libdir: $prefix/lib
   libsubdir: $abi/$libname
